gobmkida/g2/routine_to_string
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/routine_to_string/src/engine/printutils.c:842:26: error: use of undeclared identifier 'unk_496711'
result = ( const char *)&unk_496711; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/routine_to_string/src/engine/printutils.c:854:26: error: use of undeclared identifier 'unk_4966F9'
result = ( const char *)&unk_4966F9; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/routine_to_string/src/obj/1/printutils.o] Error 1
